# sheepit_project_submitter

./: .gitignore  CHANGELOG.md  README.md  __init__.py  blender_manifest.toml  config.py  listdeps.py  pack.bat  pack.py  pyproject.toml  rainys_repo_bootstrap.py  testrunner.py
.github/workflows/: release.yml
.specstory/history/: 2026-01-21_21-39Z-sheepit-blender-addon-development.md  2026-01-27_19-37Z-sheepit-enable-nla-condition.md
batter/: asset_usage.py  asset_usage_test.py
ops/: __init__.py  api_submit.py  auth_ops.py  pack_ops.py  submit_ops.py
ui/: __init__.py  output_panel.py  preferences_ui.py
utils/: __init__.py  auth.py  compat.py  version.py
