[tool.poetry]
name = "batter"
version = "1.0"
description = "Better version of BAT"
authors = ["Sybren A. Stüvel <sybren@blender.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "==3.11.*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.9"
bpy = { version = "4.5.1", source = "michaelgold" }

[[tool.poetry.source]]
name = "michaelgold"
url = "https://michaelgold.github.io/buildbpy/"
priority = "supplemental"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.black]
line-length = 88
target-version = ["py311"]
